playing with slick and mysql

--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,22 +38,20 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
+slick.dbs.default.driver= "slick.driver.MySQLDriver$"
+slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
+slick.dbs.default.db.url="jdbc:mysql://localhost:3306/redcardrobot"
+slick.dbs.default.db.initializationFailFast=true
+slick.dbs.default.db.user=root
+slick.dbs.default.db.password=root
+
+#db.default.url="mysql://root:root@localhost/redcardrobot"
+#db.default.driver=com.mysql.jdbc.Driver
+#db.default.user=root
+#db.default.pass=root
+
 # Evolutions
 # ~~~~~
 # You can disable evolutions if needed
 # evolutionplugin=disabled
-
-# Logger
-# ~~~~~
-# You can also configure logback (http://logback.qos.ch/),
-# by providing an application-logger.xml file in the conf directory.
-
-# Root logger:
-logger.root=ERROR
-
-# Logger used by the framework:
-logger.play=INFO
-
-# Logger provided to your application:
-logger.application=DEBUG
 
