--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,17 +38,13 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-slick.dbs.default.driver= "slick.driver.MySQLDriver$"
-slick.dbs.default.db.driver="com.mysql.jdbc.Driver"
-slick.dbs.default.db.url="jdbc:mysql://localhost:3306/redcardrobot"
-slick.dbs.default.db.initializationFailFast=true
-slick.dbs.default.db.user=root
-slick.dbs.default.db.password=root
-
-#db.default.url="mysql://root:root@localhost/redcardrobot"
+#db.default.url="jdbc:mysql://localhost/redcardrobot"
 #db.default.driver=com.mysql.jdbc.Driver
-#db.default.user=root
-#db.default.pass=root
+db.default.user=root
+db.default.pass=root
+
+db.default.url="jdbc:log4jdbc:mysql://localhost/redcardrobot"
+db.default.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # Evolutions
 # ~~~~~
