--- a/conf/application.conf
+++ b/conf/application.conf
@@ -40,11 +40,11 @@ application.langs="en"
 
 #db.default.url="jdbc:mysql://localhost/redcardrobot"
 #db.default.driver=com.mysql.jdbc.Driver
-db.default.user=root
-db.default.pass=root
+#db.default.user=root
+#db.default.pass=root
 
-db.default.url="jdbc:log4jdbc:mysql://localhost/redcardrobot"
-db.default.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
+#db.default.url="jdbc:log4jdbc:mysql://localhost/redcardrobot"
+#db.default.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
 
 # Evolutions
 # ~~~~~
