--- a/conf/application.conf
+++ b/conf/application.conf
@@ -38,10 +38,15 @@ application.langs="en"
 # db.default.user=sa
 # db.default.password=""
 
-#db.default.url="jdbc:mysql://localhost/redcardrobot"
-#db.default.driver=com.mysql.jdbc.Driver
-#db.default.user=root
-#db.default.pass=root
+db.default.url="jdbc:mysql://localhost/redcardrobot"
+db.default.driver=com.mysql.jdbc.Driver
+db.default.username=root
+db.default.password=root
+
+twilio.account=AC31bb18c55b3045e29fcb88a8842ce58b
+twilio.token=a037888be1296a5f08fd317d10cf1314
+twilio.from.phone="+13173155045"
+
 
 #db.default.url="jdbc:log4jdbc:mysql://localhost/redcardrobot"
 #db.default.driver=net.sf.log4jdbc.sql.jdbcapi.DriverSpy
