--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -13,10 +13,6 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Set up JDK 11
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
-        distribution: 'adopt'
+    - uses: olafurpg/setup-scala@v11
     - name: Run tests
       run: sbt compile
