--- a/.github/workflows/scala.yml
+++ b/.github/workflows/scala.yml
@@ -14,5 +14,7 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - uses: olafurpg/setup-scala@v11
+    - name: Where am I?
+      run: curl ifconfig.me/all
     - name: Run tests
       run: sbt compile
